Added changelog.txt
Fixed the HTTP header not being sent to the client
Added the server requiring http version 1.0
Added an index.html
Added the interactive client
Added README
Moved inludes, defines and function definitions to header files
Changed perform_http method to send uri to server instead of just the identifier so SimpClient now gets a 200 status from most websites