@@ -1,3 +1,10 @@
+/*
+    Author: John Curry
+    Student Number: V00755720
+    File: client.h
+    Description: HTTP/1.0 GET requeset sender
+*/
+
 #include <stdio.h>  // for printf
 #include <stdlib.h> // to suppress warnings
 #include <string.h> // for parsing the URI
@@ -19,6 +26,9 @@
 #define MAX_RES_LEN 255
 #define DEBUG 1
 
+// this is here so the interupt handler can close it when something stops the program
+int sockid;
+
  /* Function: parse_URI
 
   * Args: an http uri. Quits if there is no http header specified
@@ -32,14 +42,23 @@
 void parse_URI(char *uri, char *hostname, int *port, char *identifier);
 
 /*
-  *
-  *
-  *
+  * Function: perform_http
+
+  * Args: Socket id, hostname of server and identifier of resource we are looking for
+
+  * Return: N/A
 */
 
 void perform_http(int sockid, char *hostname, char *identifier);
 
+/*
+  * Function: open_connection
+
+  * Args: hostname of the server and port that we are connecting to on the server
+
+  * Return: the socket file descriptor
+*/
 int open_connection(char *hostname, int port);
+
 void debug(char * out);
-int sockid;
 void interupt_handler(int);
